<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/freshman_bg_tb"
    tools:context=".ui.activity.campus.CampusDataDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_data_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/freshman_bg_tb"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_data_detail_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/freshman_icon_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_data_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/freshman_strategy_reveal"
                android:textColor="@color/freshman_title_white"
                android:textSize="18sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/tl_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/freshman_bg_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_data_detail"
        app:tabTextColor="@color/freshmen_finish_black"
        app:tabSelectedTextColor="#54ACFF">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/freshman_campus_data_detail_sex" />

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/freshman_campus_data_detail_difficult" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_data_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/freshman_bg_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_data">

    </android.support.v4.view.ViewPager>

</android.support.constraint.ConstraintLayout>